--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 
 	</head>
 	<body>
-		<script>
-			console.log("Olá, mundo!")
-		</script>
-
+		
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -32,7 +29,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" >
+						<tr class="paciente" id="primeiro-paciente" >
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -75,6 +72,9 @@
 
 			</section>
 		</main>
+		<script src="js/principal.js"> 
+			
+		</script>
 
 	</body>
 </html>
