--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 						</tr>
 					</tbody>
 				</table>
+				<button id="buscar-paciente" class="botao bto-principal">Buscar Paciente</button>
 
 			</section>
 
@@ -103,6 +104,7 @@
 		<script src="js/form.js"></script>
 		<script src="js/remover-paciente.js"></script>
 		<script src="js/filtra.js"></script>
+		<script src="js/busar-paciente.js"></script>
 
 	</body>
 </html>
