--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 						</tr>
 					</tbody>
 				</table>
-				<button id="buscar-paciente" class="botao bto-principal">Buscar Paciente</button>
+				<span id="erro-ajax" class="invisivel">Erro ao buscar pacientes</span>
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Paciente</button>
 
 			</section>
 
@@ -104,7 +105,7 @@
 		<script src="js/form.js"></script>
 		<script src="js/remover-paciente.js"></script>
 		<script src="js/filtra.js"></script>
-		<script src="js/busar-paciente.js"></script>
+		<script src="js/buscar-paciente.js"></script>
 
 	</body>
 </html>
